--- a/projects/newFolderFan/index.html
+++ b/projects/newFolderFan/index.html
@@ -675,7 +675,6 @@
             <div class="t-constructorMainStickersPreview t-flex t-flexSB">
               <div class="t-constructorStickerCardHolder t-constructorStickerCardHolderOne">
                 <div data-check="true" class="t-constructorStickerCardHTop">
-                  <div class="t-topQuantity">1</div>
                   <div class="t-constructorStickerCard">
                     <div class="t-constructorStickerTextOne">
                       <div></div>
@@ -701,7 +700,6 @@
               </div>
               <div class="t-constructorStickerCardHolder t-constructorStickerCardHolderTwo">
                 <div data-check="true" class="t-constructorStickerCardHTop">
-                  <div class="t-topQuantity">1</div>
                   <div class="t-constructorStickerCard t-flex t-flexAlign">
                     <div class="t-constructorStickerImg">
                       <div style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')"></div>
@@ -725,7 +723,6 @@
               </div>
               <div class="t-constructorStickerCardHolder t-constructorStickerCardHolderThird">
                 <div data-check="true" class="t-constructorStickerCardHTop">
-                  <div class="t-topQuantity">1</div>
                   <div class="t-constructorStickerCard t-flex t-flexAlign">
                     <div class="t-constructorStickerImg">
                       <div style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')"></div>
@@ -749,7 +746,6 @@
               </div>
               <div class="t-constructorStickerCardHolder t-constructorStickerCardHolderFour">
                 <div data-check="true" class="t-constructorStickerCardHTop">
-                  <div class="t-topQuantity">1</div>
                   <div class="t-constructorStickerCard">
                     <div class="t-constructorStickerImg">
                       <div style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')"></div>
@@ -771,7 +767,6 @@
               </div>
               <div class="t-constructorStickerCardHolder t-constructorStickerCardHolderFive">
                 <div data-check="true" class="t-constructorStickerCardHTop">
-                  <div class="t-topQuantity">1</div>
                   <div class="t-constructorStickerCard t-flex t-flexAlign">
                     <div class="t-constructorStickerImg">
                       <div style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')"></div>
@@ -1059,10 +1054,11 @@
                       </div>
                       <div class="t-inputItem"><span class="t-titleConstructorDefault">Шрифт</span>
                         <select class="t-customOptions">
-                          <option value="niggas">Негры</option>
-                          <option value="moreNiggas">Еще негры</option>
-                          <option value="pokemons">Покемоны</option>
-                          <option value="ditch">Дичь</option>
+                          <option value="roboto">Roboto</option>
+                          <option value="ubuntu">Ubuntu</option>
+                          <option value="comicSansMS">Comic Sans MS</option>
+                          <option value="georgia">Georgia</option>
+                          <option value="openSans">Open Sans</option>
                         </select>
                       </div>
                     </div>
