--- a/projects/newFolderFan/index.html
+++ b/projects/newFolderFan/index.html
@@ -705,8 +705,8 @@
                       <div style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')"></div>
                     </div>
                     <div class="t-constructorStickerTextHolder t-flex t-flexColumn">
-                      <div class="t-constructorStickerTextOne"><span></span></div>
-                      <div class="t-constructorStickerTextTwo"><span></span></div>
+                      <div class="t-constructorStickerTextOne"><span class="t-spanTag"></span></div>
+                      <div class="t-constructorStickerTextTwo"><span class="t-spanTag"></span></div>
                     </div>
                   </div>
                 </div>
@@ -728,8 +728,8 @@
                       <div style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')"></div>
                     </div>
                     <div class="t-constructorStickerTextHolder t-flex t-flexColumn">
-                      <div class="t-constructorStickerTextOne"><span></span></div>
-                      <div class="t-constructorStickerTextTwo"><span></span></div>
+                      <div class="t-constructorStickerTextOne"><span class="t-spanTag"></span></div>
+                      <div class="t-constructorStickerTextTwo"><span class="t-spanTag"></span></div>
                     </div>
                   </div>
                 </div>
@@ -750,8 +750,8 @@
                     <div class="t-constructorStickerImg">
                       <div style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')"></div>
                     </div>
-                    <div class="t-constructorStickerTextOne"><span></span></div>
-                    <div class="t-constructorStickerTextTwo"><span></span></div>
+                    <div class="t-constructorStickerTextOne"><span class="t-spanTag"></span></div>
+                    <div class="t-constructorStickerTextTwo"><span class="t-spanTag"></span></div>
                   </div>
                 </div>
                 <div class="t-constructorStickerCardHBottom">
@@ -772,8 +772,8 @@
                       <div style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')"></div>
                     </div>
                     <div class="t-constructorStickerTextHolder t-flex t-flexColumn">
-                      <div class="t-constructorStickerTextOne"><span></span></div>
-                      <div class="t-constructorStickerTextTwo"><span></span></div>
+                      <div class="t-constructorStickerTextOne"><span class="t-spanTag"></span></div>
+                      <div class="t-constructorStickerTextTwo"><span class="t-spanTag"></span></div>
                     </div>
                   </div>
                 </div>
@@ -859,7 +859,7 @@
                 <h3 class="t-constructorImgPickerTitle t-titleConstructorDefault">Изображение</h3>
                 <div class="t-constructorImgPickerCategory">
                   <select class="t-customOptions">
-                    <option value="niggas">Негры</option>
+                    <option value="all">Все</option>
                     <option value="moreNiggas">Еще негры</option>
                     <option value="pokemons">Покемоны</option>
                     <option value="ditch">Дичь</option>
@@ -1056,7 +1056,7 @@
                         <select class="t-customOptions">
                           <option value="roboto">Roboto</option>
                           <option value="ubuntu">Ubuntu</option>
-                          <option value="comicSansMS">Comic Sans MS</option>
+                          <option value="pangolin">Pangolin</option>
                           <option value="georgia">Georgia</option>
                           <option value="openSans">Open Sans</option>
                         </select>
