--- a/projects/newFolderFan/index.html
+++ b/projects/newFolderFan/index.html
@@ -1076,7 +1076,8 @@
               </div>
             </div>
           </div>
-          <div class="t-constructorMainStickersButtonsWrapper">
+          <div class="t-constructorMainStickersButtonsWrapper t-flex t-flexCenter">
+            <button class="t-constructorPrevButton">Back</button>
             <button class="t-constructorNextButton t-btn"><span>Следующий шаг</span></button>
           </div>
         </div>
