--- a/projects/newFolderFan/_layout.html
+++ b/projects/newFolderFan/_layout.html
@@ -113,7 +113,6 @@
             <div class="t-constructorMainStickersPreview t-flex t-flexSB">
               <div class="t-constructorStickerCardHolder t-constructorStickerCardHolderOne">
                 <div data-check="true" class="t-constructorStickerCardHTop">
-                  <div class="t-topQuantity">1</div>
                   <div class="t-constructorStickerCard">
                     <div class="t-constructorStickerTextOne">
                       <div></div>
@@ -139,14 +138,13 @@
               </div>
               <div class="t-constructorStickerCardHolder t-constructorStickerCardHolderTwo">
                 <div data-check="true" class="t-constructorStickerCardHTop">
-                  <div class="t-topQuantity">1</div>
                   <div class="t-constructorStickerCard t-flex t-flexAlign">
                     <div class="t-constructorStickerImg">
                       <div style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')"></div>
                     </div>
                     <div class="t-constructorStickerTextHolder t-flex t-flexColumn">
-                      <div class="t-constructorStickerTextOne"><span></span></div>
-                      <div class="t-constructorStickerTextTwo"><span></span></div>
+                      <div class="t-constructorStickerTextOne"><span class="t-spanTag"></span></div>
+                      <div class="t-constructorStickerTextTwo"><span class="t-spanTag"></span></div>
                     </div>
                   </div>
                 </div>
@@ -163,14 +161,13 @@
               </div>
               <div class="t-constructorStickerCardHolder t-constructorStickerCardHolderThird">
                 <div data-check="true" class="t-constructorStickerCardHTop">
-                  <div class="t-topQuantity">1</div>
                   <div class="t-constructorStickerCard t-flex t-flexAlign">
                     <div class="t-constructorStickerImg">
                       <div style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')"></div>
                     </div>
                     <div class="t-constructorStickerTextHolder t-flex t-flexColumn">
-                      <div class="t-constructorStickerTextOne"><span></span></div>
-                      <div class="t-constructorStickerTextTwo"><span></span></div>
+                      <div class="t-constructorStickerTextOne"><span class="t-spanTag"></span></div>
+                      <div class="t-constructorStickerTextTwo"><span class="t-spanTag"></span></div>
                     </div>
                   </div>
                 </div>
@@ -187,13 +184,12 @@
               </div>
               <div class="t-constructorStickerCardHolder t-constructorStickerCardHolderFour">
                 <div data-check="true" class="t-constructorStickerCardHTop">
-                  <div class="t-topQuantity">1</div>
                   <div class="t-constructorStickerCard">
                     <div class="t-constructorStickerImg">
                       <div style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')"></div>
                     </div>
-                    <div class="t-constructorStickerTextOne"><span></span></div>
-                    <div class="t-constructorStickerTextTwo"><span></span></div>
+                    <div class="t-constructorStickerTextOne"><span class="t-spanTag"></span></div>
+                    <div class="t-constructorStickerTextTwo"><span class="t-spanTag"></span></div>
                   </div>
                 </div>
                 <div class="t-constructorStickerCardHBottom">
@@ -209,14 +205,13 @@
               </div>
               <div class="t-constructorStickerCardHolder t-constructorStickerCardHolderFive">
                 <div data-check="true" class="t-constructorStickerCardHTop">
-                  <div class="t-topQuantity">1</div>
                   <div class="t-constructorStickerCard t-flex t-flexAlign">
                     <div class="t-constructorStickerImg">
                       <div style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')"></div>
                     </div>
                     <div class="t-constructorStickerTextHolder t-flex t-flexColumn">
-                      <div class="t-constructorStickerTextOne"><span></span></div>
-                      <div class="t-constructorStickerTextTwo"><span></span></div>
+                      <div class="t-constructorStickerTextOne"><span class="t-spanTag"></span></div>
+                      <div class="t-constructorStickerTextTwo"><span class="t-spanTag"></span></div>
                     </div>
                   </div>
                 </div>
@@ -302,7 +297,7 @@
                 <h3 class="t-constructorImgPickerTitle t-titleConstructorDefault">Изображение</h3>
                 <div class="t-constructorImgPickerCategory">
                   <select class="t-customOptions">
-                    <option value="niggas">Негры</option>
+                    <option value="all">Все</option>
                     <option value="moreNiggas">Еще негры</option>
                     <option value="pokemons">Покемоны</option>
                     <option value="ditch">Дичь</option>
@@ -497,10 +492,11 @@
                       </div>
                       <div class="t-inputItem"><span class="t-titleConstructorDefault">Шрифт</span>
                         <select class="t-customOptions">
-                          <option value="niggas">Негры</option>
-                          <option value="moreNiggas">Еще негры</option>
-                          <option value="pokemons">Покемоны</option>
-                          <option value="ditch">Дичь</option>
+                          <option value="roboto">Roboto</option>
+                          <option value="ubuntu">Ubuntu</option>
+                          <option value="pangolin">Pangolin</option>
+                          <option value="georgia">Georgia</option>
+                          <option value="openSans">Open Sans</option>
                         </select>
                       </div>
                     </div>
@@ -518,7 +514,8 @@
               </div>
             </div>
           </div>
-          <div class="t-constructorMainStickersButtonsWrapper">
+          <div class="t-constructorMainStickersButtonsWrapper t-flex t-flexCenter">
+            <button class="t-constructorPrevButton">Back</button>
             <button class="t-constructorNextButton t-btn"><span>Следующий шаг</span></button>
           </div>
         </div>
