--- a/projects/newFolderFan/index.html
+++ b/projects/newFolderFan/index.html
@@ -672,7 +672,7 @@
           </div>
           <div class="t-constructorMainStickersPreviewWrapper">
             <h3 class="t-constructorMainStickersPreviewTitle">Форма и количество</h3>
-            <div class="t-constructorMainStickersPreview t-flex t-flexSB">
+            <div id="t-constructorMainStickersPreview" class="t-constructorMainStickersPreview t-flex t-flexSB">
               <div class="t-constructorStickerCardHolder t-constructorStickerCardHolderOne">
                 <div data-check="true" class="t-constructorStickerCardHTop">
                   <div class="t-constructorStickerCard">
@@ -1077,7 +1077,14 @@
             </div>
           </div>
           <div class="t-constructorMainStickersButtonsWrapper t-flex t-flexCenter">
-            <button class="t-constructorPrevButton">Back</button>
+            <div class="t-constructorPrevButton">
+              <svg width="40" height="40" xmlns="http://www.w3.org/2000/svg">
+                <g fill="none">
+                  <rect width="40" height="40" rx="20" fill="#F5F5F5"></rect>
+                  <path d="M15.206 20.068l4.475-3.889a.78.78 0 0 1 .994 0 .556.556 0 0 1 0 .864l-3.274 2.846h6.896c.388 0 .703.274.703.611 0 .337-.315.611-.703.611H17.4l3.274 2.846a.556.556 0 0 1 0 .864.78.78 0 0 1-.994 0l-4.475-3.889a.556.556 0 0 1 0-.864z" stroke="#4F4F4F" stroke-width="2"></path>
+                </g>
+              </svg>
+            </div>
             <button class="t-constructorNextButton t-btn"><span>Следующий шаг</span></button>
           </div>
         </div>
