--- a/projects/newFolderFan/index.html
+++ b/projects/newFolderFan/index.html
@@ -675,7 +675,7 @@
             <div id="t-constructorMainStickersPreview" class="t-constructorMainStickersPreview t-flex t-flexSB">
               <div class="t-constructorStickerCardHolder t-constructorStickerCardHolderOne">
                 <div data-check="true" class="t-constructorStickerCardHTop">
-                  <div class="t-constructorStickerCard">
+                  <div id="idThis" class="t-constructorStickerCard">
                     <div class="t-constructorStickerTextOne">
                       <div></div>
                     </div>
@@ -1091,6 +1091,7 @@
       </div>
     </div>
     <script src="/js/vendor.min.js"></script>
+    <script src="/js/plugins/jspdf.min.js"></script>
     <script src="/js/main.min.js"></script>
   </body>
 </html>
