--- a/projects/newFolderFan/index.html
+++ b/projects/newFolderFan/index.html
@@ -670,6 +670,11 @@
           <div class="t-constructorMainPriceWrapper">
             <h3 class="t-constructorMainQuantityAndPrice"><span class="t-constructorMainQuantity">16</span>стикеров на сумму<span class="t-constructorMainPrice">3 500 ₽</span></h3>
           </div>
+          <div class="t-closeConstructor">
+            <svg width="11" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M9.728 4.071A2 2 0 1 0 6.9 1.243L5.485 2.657 4.071 1.243A2 2 0 1 0 1.243 4.07l1.414 1.414L1.243 6.9A2 2 0 1 0 4.07 9.728l1.414-1.414L6.9 9.728a2 2 0 1 0 2.828-2.829L8.314 5.485l1.414-1.414z" fill="#E0E0E0"></path>
+            </svg>
+          </div>
           <div class="t-constructorMainStickersPreviewWrapper">
             <h3 class="t-constructorMainStickersPreviewTitle">Форма и количество</h3>
             <div id="t-constructorMainStickersPreview" class="t-constructorMainStickersPreview t-flex t-flexSB">
