--- a/projects/newFolderFan/index.html
+++ b/projects/newFolderFan/index.html
@@ -58,8 +58,8 @@
               </ul>
             </div>
           </div>
-          <div class="t-jumbotronBottomContentSection">
-            <div class="t-jumbotronBottomCardsWrapper">
+          <div id="t-jumbotronBottomContentSection" class="t-jumbotronBottomContentSection dragdealer">
+            <div class="t-jumbotronBottomCardsWrapper handle">
               <div class="t-jumbotronBottomCardsWrapperSectionOne"><a href="#" class="t-goodCard">
                   <div class="t-cardTop">
                     <div class="t-cardImgHolder"><img src="images/bg.jpg">
@@ -1108,7 +1108,7 @@
       </div>
     </div>
     <script src="/js/vendor.min.js"></script>
-    <script src="/js/plugins/jspdf.min.js"></script>
+    <script src="/js/plugins/dragdealer.js"></script>
     <script src="/js/main.min.js"></script>
   </body>
 </html>
