--- a/projects/сomparisonGit/index.html
+++ b/projects/сomparisonGit/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="/dist/styles.css">
+	<link rel="stylesheet" href="./styles.css">
     <title>Document</title>
 </head>
 <body>
 <div class="comparisonVision">
-	<img src="/dist/images/White.jpg" alt="">
-	<img src="/dist/images/Black.jpg" alt="">
+	<img src="./images/Black.jpg" alt="">
+	<img src="./images/White.jpg" alt="">
 </div>
-<script src="/dist/bundle.js"></script>
+<script src="./bundle.js"></script>
 </body>
 </html>
 
